macros/tests/ui/fail_unclosed_paren.rs
use surql_macros::surql_check;

fn main() {
	// Unclosed parenthesis
	let _ = surql_check!("SELECT * FROM (SELECT * FROM user");
}
